--- a/demo/dev.html
+++ b/demo/dev.html
@@ -25,14 +25,14 @@
             "imports": {
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/",
-                "xtal-decor/": "../node_modules/xtal-decor/",
+                "be-decorated/": "../node_modules/be-decorated/",
                 "on-to-me/": "../node_modules/on-to-me/",
                 "be-observant/": "../node_modules/be-observant/"
             }
         }
     </script>
     <script type=module>
-        import '../be-switched.js';
+        import '../be-switched2.js';
         
     </script>
 </body>
