--- a/demo/dev.html
+++ b/demo/dev.html
@@ -32,7 +32,7 @@
         }
     </script>
     <script type=module>
-        import '../be-switched2.js';
+        import '../be-switched.js';
         
     </script>
 </body>
