--- a/demo/lazy.html
+++ b/demo/lazy.html
@@ -17,7 +17,8 @@
         "lhs": {"observe": "#lhs", "on": "input", "vft": "value"},
         "op": "===",
         "rhs": {"observe": "#rhs", "on": "input", "vft": "value"},
-        "lazyDisplay": true
+        "lazyDisplay": true,
+        "setAttr": "data-is-visible"
     }'>
         <div>LHS === RHS</div>
     </template>
