--- a/tests/xtal-editor-test1.html
+++ b/tests/xtal-editor-test1.html
@@ -47,9 +47,12 @@
                 "be-loaded/": "../node_modules/be-loaded/",
                 "be-noticed/": "../node_modules/be-noticed/",
                 "be-observant/": "../node_modules/be-observant/",
+                "be-oosoom/": "../node_modules/be-oosoom/",
+                "be-open-and-shut/": "../node_modules/be-open-and-shut/",
                 "be-persistent/": "../node_modules/be-persistent/",
                 "be-preemptive/": "../node_modules/be-preemptive/",
                 "be-repeated/": "../node_modules/be-repeated/",
+                "be-vigilant/": "../node_modules/be-vigilant/",
                 "be-switched/": "../",
                 "be-transformative/": "../node_modules/be-transformative/",
                 "xtal-shell/": "../node_modules/xtal-shell/",
@@ -68,7 +71,6 @@
         import 'be-noticed/be-noticed.js';
         import 'be-observant/be-observant.js';
         import 'be-switched/be-switched.js';
-        import 'be-intersectional/be-intersectional.js';
         import 'xtal-side-nav/xtal-side-nav.js';
         import 'be-deslotted/be-deslotted.js';
         import 'xtal-tree/xtal-tree.js';
