--- a/tests/test1.html
+++ b/tests/test1.html
@@ -17,9 +17,8 @@
         "op": "===",
         "rhs": {"observe": "#rhs", "on": "input", "vft": "value"}
     }'>
-        <div>LHS === RHS</div>
+        <div mark='good' id='target'>LHS === RHS</div>
     </template>
-
     <script type=importmap>
         {
             "imports": {
@@ -33,7 +32,7 @@
     </script>
     <script type=module>
         import '../be-switched.js';
-        
     </script>
+
 </body>
 </html>
