--- a/v2/demo/dev.html
+++ b/v2/demo/dev.html
@@ -25,7 +25,7 @@
                 "trans-render/": "../../node_modules/trans-render/",
                 "xtal-element/": "../../node_modules/xtal-element/",
                 "be-decorated/": "../../node_modules/be-decorated/",
-                "be-linked/": "../../node_modules/be-linked/",
+                "be-linked/": "../../be-linked/",
                 "be-hive/":  "../../node_modules/be-hive/"
             }
         }
