--- a/demo/dev.html
+++ b/demo/dev.html
@@ -13,7 +13,7 @@
     <input id=rhs>
     <template be-switched be-linked='
         On input event of previous lhs id pass value property to lhs property of be-switched enhancement of adorned element.
-        On input event of previous rhs id pass value property to rhs property of be-switched enhancement of adorned element.
+        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  rhs ^        ^  ^           ^           ^  ^       ^.
     '
     >
         <div>LHS === RHS</div>
@@ -23,8 +23,8 @@
         {
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-hive/":  "..//node_modules/be-hive/",
+                "be-linked/": "../be-linked/",
+                "be-hive/":  "../node_modules/be-hive/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
             }
