--- a/demo/dev.html
+++ b/demo/dev.html
@@ -12,8 +12,16 @@
     <label for=rhs>RHS:</label>
     <input id=rhs>
     <template be-switched be-linked='
-        On input event of previous lhs id pass value property to lhs property of be-switched enhancement of adorned element.
-        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  rhs ^        ^  ^           ^           ^  ^       ^.
+        {
+            "enh": {
+                "beSwitched": {
+                    "lhs": "",
+                    "rhs": ""
+                }
+            }
+        }
+        On input event of previous lhs id pass value property to lhs.
+        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  rhs.
     '
     >
         <div>LHS === RHS</div>
