--- a/demo/dev.html
+++ b/demo/dev.html
@@ -18,6 +18,13 @@
                     "lhs": "",
                     "rhs": ""
                 }
+            },
+            "settings": {
+                "enh": {
+                    "beSwitched": {
+                        "deferRendering": true
+                    }
+                }
             }
         }
         On input event of previous lhs id pass value property to lhs.
@@ -31,7 +38,7 @@
         {
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-linked/": "../be-linked/",
+                "be-linked/": "../node_modules/be-linked/",
                 "be-hive/":  "../node_modules/be-hive/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
