--- a/demo/dev.html
+++ b/demo/dev.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type=importmap>
+        {
+            "imports": {
+                "be-enhanced/": "../be-enhanced/",
+                "be-linked/": "../be-linked/",
+                "be-hive/":  "../node_modules/be-hive/",
+                "trans-render/": "../node_modules/trans-render/",
+                "xtal-element/": "../node_modules/xtal-element/"
+            }
+        }
+    </script>
 </head>
 <body>
     <label for=lhs>LHS:</label>
@@ -12,24 +23,14 @@
     <label for=rhs>RHS:</label>
     <input id=rhs>
     <template be-switched be-linked='
-        On input event of previous lhs id pass value property to $0-enh-by-be-switched => lhs.
-        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  ^                     => rhs.
+        On input event of previous lhs id pass value property to $0-enh-by-be-switched:lhs.
+        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  $0-enh-by-be-switched:rhs.
     '
     >
         <div>LHS === RHS</div>
     </template>
 
-    <script type=importmap>
-        {
-            "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "trans-render/": "../node_modules/trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
-            }
-        }
-    </script>
+
     <script type=module>
         import '../be-switched.js';
         import 'be-linked/be-linked.js';
