--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,8 +8,8 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../be-enhanced/",
-                "be-linked/": "../be-linked/",
+                "be-enhanced/": "../node_modules/be-enhanced/",
+                "be-linked/": "../node_modules/be-linked/",
                 "be-hive/":  "../node_modules/be-hive/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
@@ -23,8 +23,8 @@
     <label for=rhs>RHS:</label>
     <input id=rhs>
     <template be-switched be-linked='
-        On input event of previous lhs id pass value property to $0-enh-by-be-switched:lhs.
-        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  $0-enh-by-be-switched:rhs.
+        On input event of previous lhs id pass value property to $0-enh-by-be-switched : lhs.
+        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  ^ : rhs.
     '
     >
         <div>LHS === RHS</div>
