--- a/tests/test1.html
+++ b/tests/test1.html
@@ -12,8 +12,8 @@
     <label for=rhs>RHS:</label>
     <input id=rhs>
     <template be-switched be-linked='
-        On input event of previous lhs id pass value property to $0-enh-by-be-switched => lhs.
-        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  ^                     => rhs.
+        On input event of previous lhs id pass value property to $0-enh-by-be-switched : lhs.
+        ^  ^     ^     ^  ^        rhs ^  ^    ^     ^        ^  ^                     : rhs.
     '
     >
         <div id="target" mark="good">LHS === RHS</div>
