--- a/demo/Example1.html
+++ b/demo/Example1.html
@@ -22,7 +22,9 @@
     <template be-switched='{
         "lhs": 37,
         "rhs": "hello"
-    }'
+    }
+    On when $ is happy.
+    '
     >
         <div>LHS === RHS</div>
     </template>
