--- a/demo/Example4a.html
+++ b/demo/Example4a.html
@@ -10,7 +10,7 @@
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
                 "be-hive/":  "../node_modules/be-hive/",
-                "be-propagating/": "../node_modules/be-propagating/",
+                "be-propagating/": "../be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
