--- a/tests/Example4a.html
+++ b/tests/Example4a.html
@@ -10,6 +10,7 @@
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
                 "be-hive/":  "../node_modules/be-hive/",
+                "be-propagating/": "../node_modules/be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
@@ -18,29 +19,24 @@
     </script>
 </head>
 <body>
-    <form>
-        <input id=isHappy type="checkbox">
-        <template be-switched='
-            On only when # is happy.'>
-            <my-content id=myContent></my-content>
-        </template>
-    </form>
+    <mood-stone id=moodStone></mood-stone>
     <div id=target></div>
     <script type=module>
         import '../be-switched.js';
+        import '../sample/MoodStone.js';
     </script>
     <script>
         function runTest() {
-            isHappy.click();
+            moodStone.isHappy = true;
             setTimeout(() => {
-                if (window['myContent'] !== undefined) {
+                if(moodStone.shadowRoot.querySelector('my-content') !== null){
                     target.setAttribute('mark', 'good');
                 }
             }, 100);
         }
         setTimeout(() => {
             runTest();
-        }, 2000);
+        }, 1000);
     </script>
 </body>
 </html>
