--- a/tests/Example2c.html
+++ b/tests/Example2c.html
@@ -26,7 +26,7 @@
         
         
         <template be-switched='On when $lhs equals $rhs.'>
-            <div>LHS === RHS</div>
+            <div id=equals>LHS === RHS</div>
         </template>
     </div>
 
@@ -35,7 +35,7 @@
     <script type=module>
         import '../be-switched.js';
     </script>
-        <!-- <script>
+        <script>
             function runTest() {
                 setTimeout(() => {
                     if (window['equals'] !== undefined) {
@@ -46,6 +46,6 @@
             setTimeout(() => {
                 runTest();
             }, 2000);
-        </script> -->
+        </script>
 </body>
 </html>
