--- a/tests/Example2c.html
+++ b/tests/Example2c.html
@@ -10,6 +10,7 @@
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
                 "be-hive/":  "../node_modules/be-hive/",
+                "be-linked/": "../node_modules/be-linked/",
                 "be-propagating/": "../node_modules/be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
                 "trans-render/": "../node_modules/trans-render/",
