--- a/tests/Example2b.html
+++ b/tests/Example2b.html
@@ -13,6 +13,7 @@
                 "be-linked/": "../node_modules/be-linked/",
                 "be-propagating/": "../node_modules/be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
+                "mount-observer/": "../node_modules/mount-observer/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
             }
