--- a/tests/Example1.html
+++ b/tests/Example1.html
@@ -12,6 +12,7 @@
                 "be-linked/": "../node_modules/be-linked/",
                 "be-hive/":  "../node_modules/be-hive/",
                 "be-value-added/": "../node_modules/be-value-added/",
+                "mount-observer/": "../node_modules/mount-observer/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
             }
