--- a/tests/Example!2a.html
+++ b/tests/Example!2a.html
@@ -25,7 +25,7 @@
 <body>
     <div>
         <label for=lhs>LHS:</label>
-        <input id=lhs>
+        <input value=a id=lhs>
     </div>
     <div>
         <label for=rhs>RHS:</label>
