--- a/tests/Example1.html
+++ b/tests/Example1.html
@@ -39,7 +39,7 @@
         }
     </script>
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
     </script>
     <script>
         function runTest(){
