--- a/tests/Example3a.html
+++ b/tests/Example3a.html
@@ -28,7 +28,7 @@
     </div>
     <div id=target></div>
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
     </script>
     <script>
         function runTest() {
