--- a/tests/Example4a.html
+++ b/tests/Example4a.html
@@ -23,7 +23,7 @@
     <mood-stone id=moodStone></mood-stone>
     <div id=target></div>
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
         import '../sample/MoodStone.js';
     </script>
     <script>
