--- a/tests/Example2b.html
+++ b/tests/Example2b.html
@@ -34,7 +34,7 @@
     <div id=target></div>
 
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
     </script>
         <script>
             function runTest() {
