--- a/tests/Example2c.html
+++ b/tests/Example2c.html
@@ -35,7 +35,7 @@
     <div id=target></div>
 
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
     </script>
         <script>
             function runTest() {
