--- a/tests/Example3c.html
+++ b/tests/Example3c.html
@@ -27,7 +27,7 @@
     </form>
     <div id=target></div>
     <script type=module>
-        import '../be-switched.js';
+        import '../behivior.js';
     </script>
     <script>
         function runTest() {
