--- a/demo/Example2d.html
+++ b/demo/Example2d.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2b</title>
+    <title>Example 2d</title>
     <script type=importmap>
         {
             "imports": {
@@ -21,15 +21,17 @@
     </script>
 </head>
 <body>
-    <form>
-        <label for=lhs>LHS:</label>
-        <input name=lhs>
-        <label for=rhs>RHS:</label>
-        <input name=rhs>
-        <template be-switched='on when @lhs equals @rhs.'>
-            <div>LHS === RHS</div>
+    <ways-of-science itemscope>
+        <carrot-nosed-woman></carrot-nosed-woman>
+        <a-duck></a-duck>
+        <template 
+            be-switched='
+                On when ~ carrotNosedWoman equals ~ aDuck.
+         '>
+            <div>A witch!</div>
+            <div>Burn her!</div>
         </template>
-    </form>
+    </ways-of-science>
 
 
 
