--- a/demo/Example2d.html
+++ b/demo/Example2d.html
@@ -10,11 +10,11 @@
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
                 "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
+                "be-linked/": "../be-linked/",
                 "be-propagating/": "../node_modules/be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
                 "mount-observer/": "../node_modules/mount-observer/",
-                "trans-render/": "../node_modules/trans-render/",
+                "trans-render/": "../trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
             }
         }
@@ -22,8 +22,8 @@
 </head>
 <body>
     <ways-of-science itemscope>
-        <carrot-nosed-woman></carrot-nosed-woman>
-        <a-duck></a-duck>
+        <carrot-nosed-woman aria-valuenow=11></carrot-nosed-woman>
+        <a-duck aria-valuenow=hello></a-duck>
         <template 
             be-switched='
                 On when ~ carrotNosedWoman equals ~ aDuck.
