--- a/demo/Example2e.html
+++ b/demo/Example2e.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2a</title>
+    <title>Example 2e</title>
     <script type=importmap>
         {
             "imports": {
@@ -25,7 +25,7 @@
     <input id=lhs>
     <label for=rhs>RHS:</label>
     <input id=rhs>
-    <template be-switched='on change,input when #lhs equals #rhs.'>
+    <template be-switched='on on change,input when #lhs equals #rhs.'>
         <div>LHS === RHS</div>
     </template>
 
