--- a/demo/Example2g.html
+++ b/demo/Example2g.html
@@ -22,19 +22,24 @@
 </head>
 <body>
     <ways-of-science itemscope>
-        <carrot-nosed-woman></carrot-nosed-woman>
-        <a-duck></a-duck>
+        <largest-scale>
+            <carrot-nosed-woman></carrot-nosed-woman>
+        </largest-scale>
+        <largest-scale>
+            <a-duck></a-duck>
+        </largest-scale>
+        
         <template 
             be-switched='
-            On when ~ carrotNosedWoman:weight equals ~ aDuck:weight.
+            On when ~ carrotNosedWoman:closest|largest-scale:weight equals ~ aDuck:closest|largest-scale:weight.
          '>
             <div>A witch!</div>
             <div>Burn her!</div>
         </template>
     </ways-of-science>
     <script>
-        document.querySelector('carrot-nosed-woman').weight=100;
-        document.querySelector('a-duck').weight=100;
+        document.querySelector('carrot-nosed-woman').parentElement.weight=100;
+        document.querySelector('a-duck').parentElement.weight=100;
     </script>
 
 
