--- a/demo/Example2clhs.html
+++ b/demo/Example2clhs.html
@@ -25,8 +25,6 @@
     <div>
         <label for=lhs>LHS:</label>
         <input name=lhs>
-        <label for=rhs>RHS:</label>
-        <input name=rhs>
     </div>
     These should be active:
     <section>
@@ -34,7 +32,7 @@
         <input name=lhs>
         <label for=rhs>RHS:</label>
         <input name=rhs>
-        <template be-switched='on when ^section@lhs equals ^section@rhs.'>
+        <template be-switched='on when ^section@lhs equals @rhs.'>
             <div>LHS === RHS</div>
         </template>
     </section>
