--- a/demo/Example2f_tbd.html
+++ b/demo/Example2f_tbd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2e</title>
+    <title>Example 2f</title>
     <script type=importmap>
         {
             "imports": {
@@ -21,13 +21,21 @@
     </script>
 </head>
 <body>
-    <label for=lhs>LHS:</label>
-    <input id=lhs>
-    <label for=rhs>RHS:</label>
-    <input id=rhs>
-    <template be-switched='on on change,input when #lhs equals #rhs.'>
-        <div>LHS === RHS</div>
-    </template>
+    <ways-of-science itemscope>
+        <carrot-nosed-woman></carrot-nosed-woman>
+        <a-duck></a-duck>
+        <template 
+            be-switched='
+            On when ~ carrotNosedWoman:weight equals ~ aDuck:weight.
+         '>
+            <div>A witch!</div>
+            <div>Burn her!</div>
+        </template>
+    </ways-of-science>
+    <script>
+        document.querySelector('carrot-nosed-woman').weight=100;
+        document.querySelector('a-duck').weight=100;
+    </script>
 
 
     <script type=module>
