--- a/demo/Example2f.html
+++ b/demo/Example2f.html
@@ -25,7 +25,7 @@
     <input id=lhs>
     <label for=rhs>RHS:</label>
     <input id=rhs>
-    <template be-switched='on on change,input when #lhs equals #rhs.'>
+    <template be-switched='on when #lhs equals #rhs, listening for change,input events.'>
         <div>LHS === RHS</div>
     </template>
 
