--- a/demo/Example2g.html
+++ b/demo/Example2g.html
@@ -25,7 +25,7 @@
     <input id=lhs>
     <label for=rhs>RHS:</label>
     <input id=rhs>
-    <template be-switched='on when #lhs equals #rhs, listening for change,input events.'>
+    <template be-switched='on depending on #lhs and #rhs.'>
         <div>LHS === RHS</div>
     </template>
 
