--- a/demo/Example2g.html
+++ b/demo/Example2g.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2e</title>
+    <title>Example 2g</title>
     <script type=importmap>
         {
             "imports": {
@@ -25,7 +25,11 @@
     <input id=lhs>
     <label for=rhs>RHS:</label>
     <input id=rhs>
-    <template be-switched='on depending on #lhs and #rhs.'>
+    <template
+        onload="console.log(event)"
+        oninput="console.log(event)"
+        onchange="console.log(event)"
+        be-switched='on depending on #lhs and #rhs.'>
         <div>LHS === RHS</div>
     </template>
 
