--- a/demo/Example2g.html
+++ b/demo/Example2g.html
@@ -26,9 +26,9 @@
     <label for=rhs>RHS:</label>
     <input id=rhs>
     <template
-        onload="console.log(event)"
-        oninput="console.log(event)"
-        onchange="console.log(event)"
+        onloadx="console.log(event)"
+        oninput="event.switchOn = event.ctx.lhsSignal.deref().value === event.ctx.rhsSignal.deref().value"
+        onchangex="console.log(event)"
         be-switched='on depending on #lhs and #rhs.'>
         <div>LHS === RHS</div>
     </template>
