--- a/demo/Example2g.html
+++ b/demo/Example2g.html
@@ -27,7 +27,9 @@
     <input id=rhs>
     <template
         onloadx="console.log(event)"
-        oninput="event.switchOn = event.lhsTarget.value === event.rhsTarget.value"
+        oninput="
+            event.switchOn = event.lhsTarget.value === event.rhsTarget.value
+        "
         onchangex="console.log(event)"
         be-switched='on depending on #lhs and #rhs.'>
         <div>LHS === RHS</div>
