--- a/demo/Example3Itemscope.html
+++ b/demo/Example3Itemscope.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2a</title>
+    <title>Document</title>
     <script type=importmap>
         {
             "imports": {
                 "be-enhanced/": "../node_modules/be-enhanced/",
                 "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-propagating/": "../node_modules/be-propagating/",
                 "be-value-added/": "../node_modules/be-value-added/",
-                "mount-observer/": "../node_modules/mount-observer/",
                 "trans-render/": "../node_modules/trans-render/",
                 "xtal-element/": "../node_modules/xtal-element/"
             }
@@ -21,17 +18,15 @@
     </script>
 </head>
 <body>
-    <label for=lhs>LHS:</label>
-    <input id=lhs>
-    <label for=rhs>RHS:</label>
-    <input id=rhs>
-    <template be-switched='on when #lhs equals #rhs.'>
-        <div>LHS === RHS</div>
-    </template>
-
-
+    <div itemscope>
+        <link itemprop=isHappy href=https://schema.org/True>
+        <template be-switched='
+            on when | is happy.'>
+            <my-content></my-content>
+        </template>
+    </div>
     <script type=module>
-        import '../behivior.js';
+        import '../be-switched.js';
     </script>
 </body>
 </html>
