--- a/demo/eqConditions/lhs name eq rhs name in closest section.html
+++ b/demo/eqConditions/lhs name eq rhs name in closest section.html
@@ -8,14 +8,14 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-propagating/": "../node_modules/be-propagating/",
-                "be-value-added/": "../node_modules/be-value-added/",
-                "mount-observer/": "../node_modules/mount-observer/",
-                "trans-render/": "../trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
+                "be-enhanced/": "/node_modules/be-enhanced/",
+                "be-hive/":  "/node_modules/be-hive/",
+                "be-linked/": "/node_modules/be-linked/",
+                "be-propagating/": "/node_modules/be-propagating/",
+                "be-value-added/": "/node_modules/be-value-added/",
+                "mount-observer/": "/node_modules/mount-observer/",
+                "trans-render/": "/node_modules/trans-render/",
+                "xtal-element/": "/node_modules/xtal-element/"
             }
         }
     </script>
@@ -42,7 +42,7 @@
 
 
     <script type=module>
-        import '../behivior.js';
+        import '/behivior.js';
     </script>
 </body>
 </html>
