--- a/demo/eqConditions/lhs id not equals rhs id - not working.html
+++ b/demo/eqConditions/lhs id not equals rhs id - not working.html
@@ -8,13 +8,13 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-propagating/": "../node_modules/be-propagating/",
-                "be-value-added/": "../node_modules/be-value-added/",
-                "trans-render/": "../node_modules/trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
+                "be-enhanced/": "/node_modules/be-enhanced/",
+                "be-hive/":  "/node_modules/be-hive/",
+                "be-linked/": "/node_modules/be-linked/",
+                "be-propagating/": "/node_modules/be-propagating/",
+                "be-value-added/": "/node_modules/be-value-added/",
+                "trans-render/": "/node_modules/trans-render/",
+                "xtal-element/": "/node_modules/xtal-element/"
             }
         }
     </script>
@@ -24,13 +24,13 @@
     <input id=lhs>
     <label for=rhs>RHS:</label>
     <input id=rhs>
-    <template be-switched='on when #lhs equals #rhs.'>
+    <template be-switched='off when #lhs eq #rhs.'>
         <div>LHS === RHS</div>
     </template>
 
 
     <script type=module>
-        import '../be-switched.js';
+        import '/be-switched.js';
     </script>
 </body>
 </html>
