--- a/demo/eqConditions/lhs itemprop eq rhs itemprop.html
+++ b/demo/eqConditions/lhs itemprop eq rhs itemprop.html
@@ -8,14 +8,14 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-propagating/": "../node_modules/be-propagating/",
-                "be-value-added/": "../node_modules/be-value-added/",
-                "mount-observer/": "../node_modules/mount-observer/",
-                "trans-render/": "../node_modules/trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
+                "be-enhanced/": "/node_modules/be-enhanced/",
+                "be-hive/":  "/node_modules/be-hive/",
+                "be-linked/": "/node_modules/be-linked/",
+                "be-propagating/": "/node_modules/be-propagating/",
+                "be-value-added/": "/node_modules/be-value-added/",
+                "mount-observer/": "/node_modules/mount-observer/",
+                "trans-render/": "/node_modules/trans-render/",
+                "xtal-element/": "/node_modules/xtal-element/"
             }
         }
     </script>
@@ -27,7 +27,7 @@
         <span itemprop=rhs contenteditable>I am here</span>
         
         
-        <template be-switched='on when |lhs equals |rhs.'>
+        <template be-switched='on when |lhs eq |rhs.'>
             <div id=equals>LHS === RHS</div>
         </template>
     </div>
@@ -35,7 +35,7 @@
     <div id=target></div>
 
     <script type=module>
-        import '../behivior.js';
+        import '/behivior.js';
     </script>
         <script>
             function runTest() {
