--- a/demo/greater than conditions/by id/lhs id gt rhs id.html
+++ b/demo/greater than conditions/by id/lhs id gt rhs id.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lhs id lt rhs id</title>
+    <title>lhs id gt rhs id</title>
     <script type=importmap>
         {
             "imports": {
@@ -25,7 +25,7 @@
     <input type=number id=lhs>
     <label for=rhs>RHS:</label>
     <input type=number id=rhs>
-    <template be-switched='on when #lhs lt #rhs.'>
+    <template be-switched='on when #lhs gt #rhs.'>
         <div>LHS &lt; RHS</div>
     </template>
 
