--- a/demo/boolish conditions/by itemprop/By Itemprop.html
+++ b/demo/boolish conditions/by itemprop/By Itemprop.html
@@ -8,11 +8,11 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "be-value-added/": "../node_modules/be-value-added/",
-                "trans-render/": "../node_modules/trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
+                "be-enhanced/": "/node_modules/be-enhanced/",
+                "be-hive/":  "/node_modules/be-hive/",
+                "be-value-added/": "/node_modules/be-value-added/",
+                "trans-render/": "/node_modules/trans-render/",
+                "xtal-element/": "/node_modules/xtal-element/"
             }
         }
     </script>
@@ -26,7 +26,7 @@
         </template>
     </div>
     <script type=module>
-        import '../be-switched.js';
+        import '/be-switched.js';
     </script>
 </body>
 </html>
