--- a/demo/boolish conditions/previous element sibling [TODO].html
+++ b/demo/boolish conditions/previous element sibling [TODO].html
@@ -23,6 +23,7 @@
         <template be-switched='
             on when ^ is truthy.'>
             <my-content></my-content>
+            <div>i am here</div>
         </template>
     </div>
     <script type=module>
