--- a/demo/greater than conditions/by id/lhs id lt or eq rhs id.html
+++ b/demo/greater than conditions/by id/lhs id lt or eq rhs id.html
@@ -26,7 +26,7 @@
     <label for=rhs>RHS:</label>
     <input type=number id=rhs>
     <template be-switched='off when #lhs gt #rhs.'>
-        <div>LHS &lt; RHS</div>
+        <div>LHS &lt;= RHS</div>
     </template>
 
 
