--- a/demo/nvalue conditions/two dependencies.html
+++ b/demo/nvalue conditions/two dependencies.html
@@ -14,7 +14,7 @@
                 "be-propagating/": "/node_modules/be-propagating/",
                 "be-value-added/": "/node_modules/be-value-added/",
                 "mount-observer/": "/node_modules/mount-observer/",
-                "trans-render/": "/trans-render/",
+                "trans-render/": "/node_modules/trans-render/",
                 "xtal-element/": "/node_modules/xtal-element/"
             }
         }
