--- a/tests/Example2a.html
+++ b/tests/Example2a.html
@@ -9,14 +9,14 @@
     <script type=importmap>
         {
             "imports": {
-                "be-enhanced/": "../node_modules/be-enhanced/",
-                "be-hive/":  "../node_modules/be-hive/",
-                "be-linked/": "../node_modules/be-linked/",
-                "be-propagating/": "../node_modules/be-propagating/",
-                "be-value-added/": "../node_modules/be-value-added/",
-                "mount-observer/": "../node_modules/mount-observer/",
-                "trans-render/": "../node_modules/trans-render/",
-                "xtal-element/": "../node_modules/xtal-element/"
+                "be-enhanced/": "/node_modules/be-enhanced/",
+                "be-hive/":  "/node_modules/be-hive/",
+                "be-linked/": "/node_modules/be-linked/",
+                "be-propagating/": "/node_modules/be-propagating/",
+                "be-value-added/": "/node_modules/be-value-added/",
+                "mount-observer/": "/node_modules/mount-observer/",
+                "trans-render/": "/node_modules/trans-render/",
+                "xtal-element/": "/node_modules/xtal-element/"
             }
         }
     </script>
